--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,9 @@ html {
     text-decoration: none;
     text-transform: none;
     list-style-type: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont,
+                 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+                 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* FIXME: Setting up the project ends */
@@ -50,6 +53,7 @@ html {
     right: 0;
     top: 0;
     padding: 0 1rem;
+    z-index: 1000;
 }
 
 .profile__image img {
@@ -94,7 +98,100 @@ html {
 
 /* FIXME: Header ends */
 
+/* TODO: Aside bar starts */
+
+.aside__bar {
+    background: var(--main-color);
+    position: fixed;
+    top: var(--header-height);
+    left: -90%;
+    width: 80%;
+    bottom: 0;
+    padding: 3rem;
+    padding-right: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.1rem;
+    overflow: hidden;
+    z-index: 900;
+}
+
+.aside__bar.active {
+    left: 0;
+}
+
+.aside__bar__item div {
+    width: 4rem;
+}
+
+.aside__bar__item {
+    background: none;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    width: calc(100% + 2%);
+    border-radius: 4rem 0 0 4rem;
+    cursor: pointer;
+    gap: 1rem;
+}
+
+.aside__bar__item.active,
+.aside__bar__item:hover {
+    background: var(--second-color);
+}
+
+.aside__bar__item i {
+    font-size: 2.5rem;
+    color: var(--second-color);
+}
+
+.aside__bar__item.active i,
+.aside__bar__item:hover i {
+    color: var(--main-color);
+}
+
+.aside__bar__item .aside__bar__item__information {
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--second-color);
+}
+
+.aside__bar__item.active .aside__bar__item__information,
+.aside__bar__item:hover .aside__bar__item__information {
+    color: var(--main-color);
+}
+
+.aside__bar__logo {
+    display: none;
+}
+
+/* FIXME: Aside bar ends /*
+
+
 /* TODO: Media queries start */
+
+@media screen and (min-width:220px) {
+
+    /* TODO: Aside bar adjustments */
+
+    .aside__bar {
+       overflow: visible;
+       overflow-y: scroll;
+    }
+    
+    .aside__bar::-webkit-scrollbar-track,
+    .aside__bar::-webkit-scrollbar-thumb,
+    .aside__bar::-webkit-scrollbar-track-piece,
+    .aside__bar::-webkit-scrollbar,
+    .aside__bar::-webkit-scrollbar-button,
+    .aside__bar::-webkit-scrollbar-corner {
+        -webkit-appearance: none;
+        width: 0;
+        height: 0;
+    }
+
+    /* FIXME: Aside bar adjustments end */
+}
 
 @media screen and (min-width: 350px) {
 
@@ -182,8 +279,29 @@ html {
     }
 
     /* FIXME: Header adjustments end */
+
+    /* TODO: Aside bar adjustments */
+
+    .aside__bar__logo {
+        display: block;
+        margin-bottom: 4rem;
+        text-align: center;
+    }
+
+    .aside__bar__logo span {
+        font-size: 4rem;
+        text-transform: uppercase;
+        color: var(--second-color);
+    }
+
+    .aside__bar {
+        width: 40%;
+    }
+
+    /* FIXME: Aside bar adjustments end */
     
 }
+
 
 @media screen and (min-width:1000px) {
 
@@ -200,6 +318,50 @@ html {
         color: var(--third-color);
     }
 
+    .header {
+        justify-content: space-between;
+        padding: 0 4rem 0 2rem;
+    }
+
     /* FIXME: Header adjustments end */
+
+    /* TODO: Aside bar adjustments */
+
+    :root {
+        --left-width-aside-header: 8rem;
+    }
+
+    .header {
+        left: var(--left-width-aside-header);
+    }
+
+    .aside__bar {
+        top: 0;
+        left: 0;
+        padding-left: 1rem;
+        width: var(--left-width-aside-header);  
+        overflow-x: hidden;     
+    }
+
+    .aside__bar__item {
+        gap: 2rem;
+    }
+
+    .aside__bar  .aside__bar__item .aside__bar__item__information {
+        opacity: 0;
+    }
+    .aside__bar.active  .aside__bar__item .aside__bar__item__information {
+        opacity: 1;
+    }
+
+    .aside__bar__logo span {
+        opacity: 0;
+    }
+
+    .aside__bar.active .aside__bar__logo span {
+        opacity: 1;
+    }
+
+    /* FIXME: Aside bar adjustments end */
     
 }
