--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ html {
     --second-color: #fefefe;
     --third-color: #222;
     --header-height: 8rem;
+    --fourth-color: #f0f4fa;
 }
 
 * {
@@ -27,6 +28,10 @@ html {
     font-family: system-ui, -apple-system, BlinkMacSystemFont,
                  'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
                  'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+    background: var(--fourth-color);
 }
 
 /* FIXME: Setting up the project ends */
@@ -167,6 +172,66 @@ html {
 
 /* FIXME: Aside bar ends /*
 
+/* TODO: Main adjustments */
+
+.main {
+    margin-top: var(--header-height);
+    padding: 5rem 1.5rem;
+}
+
+/* FIXME: Main adjustments end */
+
+/* TODO: Dashboard options starts */
+
+.options {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+}
+
+.options .option {
+    background: var(--second-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3rem;
+    border-radius: 1rem;
+    width: 24rem;
+    cursor: pointer;
+}
+
+.options .option:hover {
+    background: var(--main-color);
+}
+
+
+.option__content span {
+    color: var(--third-color);
+    font-size: 3rem;
+    font-weight: bolder;
+}
+
+.option:hover .option__content span,
+.option:hover .option__content h2,
+.option:hover .option__icon i {
+    color: var(--second-color);
+}
+
+.option__content h2 {
+    color: #777;
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+}
+
+.option__icon i {
+    font-size: 4rem;
+    color: var(--main-color);
+}
+
+/* FIXME: Dashboard options ends */
+
 
 /* TODO: Media queries start */
 
@@ -209,6 +274,14 @@ html {
     }
 
     /* FIXME: Header adjustments end */
+
+    /* TODO: Dashboard options adjustments */
+
+    .options .option {
+        width: 26rem;
+    }
+
+    /* FIXME: Dashboard options adjustments */
 }
 
 @media screen and (min-width:400px) {
@@ -229,6 +302,15 @@ html {
     }
 
     /* FIXME: Header adjustments end */
+
+    /* TODO: Dashboard options adjustments */
+
+     .options .option {
+        width: 28rem;
+    }
+
+    /* FIXME: Dashboard options adjustments */
+
     
 }
 
@@ -241,6 +323,39 @@ html {
     }
 
     /* FIXME: Header adjustments end */
+
+    /* TODO: Dashboard options adjustments */
+
+     .options .option {
+        width: 30rem;
+    }
+
+    /* FIXME: Dashboard options adjustments */
+    
+}
+
+@media screen and (min-width:500px) {
+
+    /* TODO: Dashboard options adjustments */
+
+    .options .option {
+        width: 21rem;
+    }
+
+    /* FIXME: Dashboard options adjustments */
+    
+}
+
+@media screen and (min-width:600px) {
+
+    
+    /* TODO: Dashboard options adjustments */
+
+    .options .option {
+        width: 24rem;
+    }
+
+    /* FIXME: Dashboard options adjustments */
     
 }
 
@@ -299,9 +414,44 @@ html {
     }
 
     /* FIXME: Aside bar adjustments end */
+
+    /* TODO: Dashboard options adjustments */
+
+    .options .option {
+        width: 26rem;
+    }
+
+    .options {
+        gap: 6rem;
+    }
+
+    /* FIXME: Dashboard options adjustments */
     
 }
 
+@media screen and (min-width:800px) {
+
+    /* TODO: Dashboard options adjustments */
+
+    .options .option {
+        width: 30rem;
+    }
+
+    /* FIXME: Dashboard options adjustments */
+    
+}
+
+@media screen and (min-width:900px) {
+
+    /* TODO: Dashboard options adjustments */
+
+    .options .option {
+        width: 33rem;
+    }
+
+    /* FIXME: Dashboard options adjustments */
+    
+}
 
 @media screen and (min-width:1000px) {
 
@@ -363,5 +513,50 @@ html {
     }
 
     /* FIXME: Aside bar adjustments end */
+
+    /* TODO: Main adjustments */
+
+    .main {
+        margin-left: var(--left-width-aside-header);
+    }
+
+    /* FIXME: Main adjustments end */
+
+    /* TODO: Dashboard options adjustments */
+
+    .options .option {
+        width: 30rem;
+    }
+
+    /* FIXME: Dashboard options adjustments */
+    
+}
+
+@media screen and (min-width:1100px) { 
+
+    /* TODO: Dashboard options adjustments */
+
+    .options .option {
+        width: 24rem;
+    }
+
+    .options {
+        flex-wrap: nowrap;
+        gap: 3rem;
+    }
+
+    /* FIXME: Dashboard options adjustments */
+    
+}
+
+@media screen and (min-width:1200px) { 
+
+    /* TODO: Dashboard options adjustments */
+
+    .options .option {
+        width: 26rem;
+    }
+
+    /* FIXME: Dashboard options adjustments */
     
 }
